--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -145,7 +145,7 @@
 								<input type="text"
 									   class="form-control"
 									   placeholder="{{'indicator.formula_name_ph'|translate}}"
-									   ng-model="indicator.formulas[formulaId].name" ng-change="annotateFormula(formulaId)" />
+									   ng-model="indicator.formulas[formulaId].name" />
 
 								<span class="input-group-btn">
 									<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate>shared.remove</button>
@@ -159,7 +159,6 @@
 							<input type="text"
 								   class="form-control"
 								   ng-model="indicator.formulas[formulaId].expression"
-								   ng-change="annotateFormula(formulaId)"
 								   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
 						</td>
 					</tr>
@@ -191,7 +190,7 @@
 
 	<div class="pull-right" acl-has-role="indicator">
 		<button class="btn btn-primary"
-				ng-disabled="indicatorForm.$invalid || isUnchanged() || formulaInvalid()"
+				ng-disabled="indicatorForm.$invalid || isUnchanged() || !formulasAreValid"
 				ng-click="save()">
 			<i class="fa fa-floppy-o"></i>
 			<span translate>shared.save</span>
