Fix project list (too many icons displayed) Fix acls in input and form-edit Remove form edit warning if user can't edit anyway

--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -20,7 +20,7 @@
 				{{indicator.name}}
 			</div>
 
-			<div class="col-sm-8" acl-project-has-role="input" acl-fallback="currentInput.values[indicator.model]">
+			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="currentInput.values[indicator.model]">
 				<input type="number"
 					   class="form-control input-sm"
 					   ng-model="currentInput.values[indicator.model]"
