--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -7,7 +7,7 @@
 </ol>
 
 <form class="form-horizontal" role="form" name="formForm" novalidate>
-	<div class="alert alert-danger" ng-if="!isNew" translate="project.form_warning"></div>
+	<div class="alert alert-danger" ng-if="!isNew" acl-has-project-role="owner" translate="project.form_warning"></div>
 
 	<fieldset>
 		<legend translate="project.data_collection"></legend>
@@ -142,8 +142,11 @@
 		<script type="text/ng-template" id="form-sub-element.html">
 			<div class="panel-heading">
 				<span class="pull-right" style="font-size: 18px;">
-					<i class="fa fa-caret-square-o-up" ng-if="!key && !$first" ng-click="move($index, -1)" tooltip="{{'project.move_up'|translate}}"></i>
-					<i class="fa fa-caret-square-o-down" ng-if="!key && !$last" ng-click="move($index, 1)" tooltip="{{'project.move_down'|translate}}"></i>
+					<span acl-has-project-role="owner">
+						<i class="fa fa-caret-square-o-up" ng-if="!key && !$first" ng-click="move($index, -1)" tooltip="{{'project.move_up'|translate}}"></i>
+						<i class="fa fa-caret-square-o-down" ng-if="!key && !$last" ng-click="move($index, 1)" tooltip="{{'project.move_down'|translate}}"></i>
+					</span>
+
 					<i class="fa fa-compass" ng-style="{color: indicator.geoAggregation != 'none' ? 'green' : 'red'}" tooltip="{{'indicator.geo_aggregation'|translate}}"></i>
 					<i class="fa fa-clock-o" ng-style="{color: indicator.timeAggregation != 'none' ? 'green' : 'red'}" tooltip="{{'indicator.time_aggregation'|translate}}"></i>
 				</span>
@@ -161,16 +164,21 @@
 					<label class="col-sm-2 control-label" translate="project.indicator_source"></label>
 					<div class="col-sm-10">
 						<select class="form-control"
+								acl-has-project-role="owner"
 								ng-model="indicator.type"
 								ng-change="sourceChanged(indicator)"
 								ng-options="i.value as i.label group by i.group for i in indicator.availableTypes">
 						</select>
+
+						<p class="form-control-static" acl-lacks-project-role="owner" ng-repeat="i in indicator.availableTypes" ng-if="i.value === indicator.type">
+							{{i.label}}
+						</p>
 					</div>
 				</div>
 
 				<div class="form-group" ng-if="indicator.type == 'input'">
 					<label class="col-sm-2 control-label" translate="project.source"></label>
-					<div class="col-sm-10">
+					<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="indicator.source">
 						<input type="text" class="form-control" ng-model="indicator.source" />
 					</div>
 				</div>
