Fix input delete Fix user list edit when not admin Add target and baseline to fields in reporting

--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -44,9 +44,8 @@
 		<span translate="shared.save"></span>
 	</button>
 
-	<button class="btn btn-danger" ng-click="delete()">
+	<button class="btn btn-danger" ng-click="delete()" ng-if="!isNew">
 		<i class="fa fa-remove"></i>
 		<span translate>shared.delete</span>
 	</button>
 </div>
-
