--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -120,17 +120,13 @@
 			</div>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group" acl-has-project-role="owner">
 			<label for="indicators-input" class="col-md-2 control-label" translate="shared.indicators"></label>
 			<div class="col-sm-10">
-				<ui-select multiple ng-model="container.chosenIndicatorIds" theme="bootstrap" acl-has-project-role="owner">
+				<ui-select multiple ng-model="container.chosenIndicatorIds" theme="bootstrap">
 					<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
 					<ui-select-choices repeat="indicator._id as indicator in availableIndicators">{{indicator.name}}</ui-select-choices>
 				</ui-select>
-
-				<span acl-lacks-project-role="owner">
-					{{container.chosenIndicators | getObjects:availableIndicators | pluck:'name' | join:', '}}
-				</span>
 			</div>
 		</div>
 	</fieldset>
