--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -2,10 +2,10 @@
 	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
 	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
 	<li><a ui-sref="main.project.input_list({projectId: project._id})" translate>project.waiting_inputs</a></li>
-	<li class="active">{{inputEntity.name}}</li>
 	<li class="active">{{form.name}}</li>
+	<li class="active">{{inputEntity.name}}</li>
+	<li class="active">{{currentInput.period}}</li>
 </ol>
-
 
 <script type="text/ng-template" id="form-sub-3.html">
 	<div class="panel-heading">
@@ -20,12 +20,25 @@
 				{{indicator.name}}
 			</div>
 
-			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="currentInput.values[indicator.model]">
+			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="value">
+				<div class="input-group" ng-if="!key">
+					<div class="input-group-addon">
+						<i class="fa fa-circle" ng-style="{color:status[indicator.id]}" tooltip-html-unsafe="{{'project.status_' + status[indicator.id]|translate}}"></i>
+					</div>
+					<input type="number"
+						   class="form-control input-sm"
+						   ng-model="currentInput.values[indicator.model]"
+						   placeholder="Saisie précédente: {{previousInput.values[indicator.model] || '?'}}"
+						   ng-disabled="indicator.type !== 'input'" />
+				</div>
+
 				<input type="number"
 					   class="form-control input-sm"
+					   ng-disabled="indicator.type !== 'input'"
+					   ng-if="key"
 					   ng-model="currentInput.values[indicator.model]"
-					   placeholder="Saisie précédente: {{previousInput.values[indicator.model] || '?'}}"
-					   ng-disabled="indicator.type !== 'input'">
+					   placeholder="Saisie précédente: {{previousInput.values[indicator.model] || '?'}}" />
+
 			</div>
 		</div>
 	</div>
