--- a/dev/partials/projects/logical-frame-indicator.html
+++ b/dev/partials/projects/logical-frame-indicator.html
@@ -120,7 +120,17 @@
 				<div ng-repeat="target in planning.targets" class="row" style="padding-bottom: 10px" acl-has-project-role="owner">
 					<ng-form name="targetForm">
 						<div class="col-sm-5 form-group" show-errors style="margin: 0">
-							<input type="date" class="form-control" ng-model="target.period" name="period" required />
+							<input type="text" 
+								   datepicker-popup="yyyy/MM/dd"
+								   name="period"
+								   ng-model="target.period"
+								   is-open="dateOpen"
+								   show-button-bar="false"
+								   ng-click = "dateOpen = true"
+								   starting-day="1"
+								   show-weeks="0"
+								   required
+								   class="form-control" />
 						</div>
 						<div class="col-sm-5 form-group" show-errors style="margin: 0">
 							<input type="text" class="form-control" ng-model="target.value" name="value" placeholder="{{'project.target_value_ph'|translate}}" required />
