--- a/dev/partials/indicators/reporting.html
+++ b/dev/partials/indicators/reporting.html
@@ -20,7 +20,19 @@
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						<input type="date" class="form-control" ng-model="query.begin" required />
+						<input type="text" 
+							   datepicker-popup="yyyy/MM/dd"
+							   name="begin"
+							   ng-model="dates.begin"
+							   is-open="beginDateOpen"
+							   show-button-bar="false"
+							   ng-click="beginDateOpen=true"
+							   starting-day="1"
+							   show-weeks="0"
+							   required
+							   ng-max="dates.end"
+							   class="form-control" />
+
 					</div>
 				</div>
 			</div>
@@ -55,7 +67,18 @@
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-						<input type="date" class="form-control" ng-model="query.end" required />
+						<input type="text" 
+							   datepicker-popup="yyyy/MM/dd"
+							   name="end"
+							   ng-model="dates.end"
+							   is-open="endDateOpen"
+							   show-button-bar="false"
+							   ng-click="endDateOpen=true"
+							   starting-day="1"
+							   show-weeks="0"
+							   required
+							   ng-min="dates.begin"
+							   class="form-control" />
 					</div>
 				</div>
 			</div>
