--- a/dev/partials/projects/logical-frame.html
+++ b/dev/partials/projects/logical-frame.html
@@ -26,14 +26,19 @@
 		<div class="form-group" show-errors>
 			<label for="input-begin" class="col-sm-2 control-label" translate="project.begin_date"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.begin">
-				<input type="date"
-					   class="form-control"
-					   id="input-begin"
+
+				<input type="text" 
+					   datepicker-popup="yyyy/MM/dd"
 					   name="begin"
-					   max="{{project.end}}"
 					   ng-model="project.begin"
+					   is-open="beginDateOpen"
+					   show-button-bar="false"
+					   ng-click = "beginDateOpen = true"
+					   starting-day="1"
+					   show-weeks="0"
 					   required
-					   lower-than="{{project.end}}">
+					   ng-max="project.end"
+					   class="form-control" />
 
 				<p class="help-block" ng-if="projectForm.begin.$error.required" translate="form.mandatory"></p>
 				<p class="help-block" ng-if="projectForm.begin.$error.lowerThan" translate="form.begin_lower_than_end"></p>
@@ -44,14 +49,19 @@
 		<div class="form-group" show-errors>
 			<label for="input-end" class="col-sm-2 control-label" translate="project.end_date"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.end">
-				<input type="date"
-					   class="form-control"
-					   id="input-end"
+
+				<input type="text" 
+					   datepicker-popup="yyyy/MM/dd"
 					   name="end"
-					   min="{{project.begin}}"
 					   ng-model="project.end"
-					   greater-than="{{project.begin}}"
-					   required>
+					   is-open="endDateOpen"
+					   show-button-bar="false"
+					   ng-click = "endDateOpen = true"
+					   starting-day="1"
+					   show-weeks="0"
+					   required
+					   ng-min="project.begin"
+					   class="form-control" />
 
 				<p class="help-block" ng-if="projectForm.end.$error.required" translate="form.mandatory"></p>
 				<p class="help-block" ng-if="projectForm.end.$error.greaterThan" translate="form.end_greater_than_begin"></p>
