--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -189,7 +189,7 @@
 								acl-has-project-role="owner"
 								ng-model="indicator.type"
 								ng-change="sourceChanged(indicator)"
-								ng-options="i.value as i.label group by i.group for i in indicator.availableTypes">
+								ng-options="i.value as i.label|translate:i group by i.group|translate for i in indicator.availableTypes">
 						</select>
 
 						<p class="form-control-static" acl-lacks-project-role="owner" ng-repeat="i in indicator.availableTypes" ng-if="i.value === indicator.type">
