--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -20,7 +20,7 @@
 				{{indicator.name}}
 			</div>
 
-			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="value">
+			<div class="col-sm-8" acl-has-project-role="input" acl-fallback="currentInput.values[indicator.model]">
 				<div class="input-group" ng-if="!key">
 					<div class="input-group-addon">
 						<i class="fa fa-circle" ng-style="{color:status[indicator.id]}" tooltip-html-unsafe="{{'project.status_' + status[indicator.id]|translate}}"></i>
