--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -137,7 +137,7 @@
 			<div class="col-sm-10">
 				<table class="table table-bordered table-condensed"
 					   ng-repeat="(formulaId, formula) in indicator.formulas"
-					   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].isValid ? '#ddd' : 'darkred'}}">
+					   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].__isValid ? '#ddd' : 'darkred'}}">
 					<tr>
 						<td style="width: 250px" translate>shared.name</td>
 						<td acl-has-role="indicator" acl-fallback="indicator.formulas[formulaId].name">
@@ -162,7 +162,7 @@
 								   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
 						</td>
 					</tr>
-					<tr ng-repeat="symbol in indicator.formulas[formulaId].symbols">
+					<tr ng-repeat="symbol in indicator.formulas[formulaId].__symbols">
 						<td>{{'indicator.parameter'|translate}} <strong>"{{symbol}}"</strong></td>
 						<td acl-has-role="indicator" acl-fallback="indicatorsById[indicator.formulas[formulaId].parameters[symbol]].name">
 							<div class="input-group">
