Fix inputs, reporting, build. Make loading pages faster (skip all options, make more queries in parallel)

--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -23,12 +23,12 @@
 						<span translate>shared.indicators_catalog</span>
 					</a>
 				</li>
-				<li ng-class="{active: $state.includes('main.help')}">
+				<!-- <li ng-class="{active: $state.includes('main.help')}">
 					<a ui-sref="main.help.monitoring">
 						<i class="fa fa-fw fa-question"></i>
 						<span translate>shared.help</span>
 					</a>
-				</li>
+				</li> -->
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
