--- a/client/dev/partials/change-password.html
+++ b/client/dev/partials/change-password.html
@@ -3,17 +3,12 @@
 	<form class="form-signin" role="form" novalidate>
 		<h2 class="form-signin-heading" translate="login.change_password_please"></h2>
 
-		<div class="alert alert-danger"
-			 role="alert"
-			 ng-if="showError"
-			 translate="login.error"></div>
-
 		<label for="inputEmail" class="sr-only" translate="login.login"></label>
 		<input type="text"
 			   id="inputEmail"
 			   class="form-control"
 			   autofocus
-			   ng-model="login" disabled>
+			   ng-model="userCtx._id" disabled>
 		
 		<label for="inputPasswordChange" class="sr-only" translate="login.password"></label>
 
@@ -24,17 +19,17 @@
 			   required
 			   ng-model="password">
 
-		<input type="password2"
+		<input type="password"
 			   id="inputPasswordChange2"
 			   class="form-control"
 			   placeholder="{{'login.new_password_again'|translate}}"
 			   required
-			   ng-model="password">
+			   ng-model="password2">
 		
 		<button class="btn btn-lg btn-primary btn-block"
 				type="submit"
 				ng-click="changePassword()"
 				translate="login.change_password"
-				ng-disabled="!login || !password"></button>
+				ng-disabled="!password || password2 !== password || password.length < 6"></button>
 	</form>
 </div>
