Implement sso with azure

--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -11,6 +11,12 @@
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav" ng-if="userCtx">
+				<li>
+					<a ng-click="logout()">
+						<i class="fa fa-fw fa-arrow-left"></i>
+						<span translate>shared.back_to_intranet</span>
+					</a>
+				</li>
 				<li ng-class="{active: $state.includes('main.projects') || $state.includes('main.project')}">
 					<a ui-sref="main.projects">
 						<i class="fa fa-fw fa-building"></i>
@@ -45,16 +51,11 @@
 					</ul>
 				</li>
 
-				<li class="dropdown" ng-if="userCtx">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+				<li ng-if="userCtx">
+					<a>
 						<i class="fa fa-fw fa-user"></i>
-						{{userCtx._id}}
-						<span class="caret"></span>
+						{{userCtx.name}}
 					</a>
-					<ul class="dropdown-menu" role="menu">
-						<li><a ui-sref="main.change_password" translate="shared.change_password"></a></li>
-						<li><a ng-click="logout()" translate="shared.logout"></a></li>
-					</ul>
 				</li>
 			</ul>
 		</div>
