implement admin and start working on mandatory indicators

--- a/client/dev/partials/admin/menu.html
+++ b/client/dev/partials/admin/menu.html
@@ -2,19 +2,19 @@
 	<div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked">
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.list">
+				<a ui-sref="main.admin.users">
 					<i class="fa fa-book fa-fw"></i>
-					<span translate>shared.indicators</span>
+					<span translate>shared.users</span>
 				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.theme_list">
+				<a ui-sref="main.admin.theme_list">
 					<i class="fa fa-medkit fa-fw"></i>
 					<span translate>indicator.themes</span>
 				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.type_list">
+				<a ui-sref="main.admin.type_list">
 					<i class="fa fa-filter fa-fw"></i>
 					<span translate>indicator.types</span>
 				</a>
