--- a/client/dev/partials/admin/theme-type-list.html
+++ b/client/dev/partials/admin/theme-type-list.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.indicators.list" translate>shared.indicators</a></li>
+	<li><a ui-sref="main.admin.users" translate>shared.settings</a></li>
 	<li class="active" translate ng-if="entityType === 'theme'">indicator.themes_list</li>
 	<li class="active" translate ng-if="entityType === 'type'">indicator.types_list</li>
 </ol>
