--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -7,7 +7,7 @@
 </style>
 
 <ol class="breadcrumb">
-	<li><a ui-sref="main.indicators.list" translate>shared.indicators</a></li>
+	<li><a ui-sref="main.indicators" translate>shared.indicators</a></li>
 	<li><a ui-sref="main.indicator.edit({indicatorId: indicator._id})">{{indicator.name}}</a></li>
 	<li class="active" translate>shared.reporting</li>
 </ol>
