--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -1,20 +1,41 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.indicators.list" translate>shared.indicators</a></li>
+	<li><a ui-sref="main.indicators" translate>shared.indicators</a></li>
 	<li class="active">{{indicator.name}}</li>
 </ol>
 
 <form class="form-horizontal" role="form" name="indicatorForm" novalidate>
+	
+
 	<fieldset>
-		<legend translate>indicator.definition</legend>
+		<legend translate="indicator.categorization"></legend>
 
 		<div class="form-group">
-			<label for="input-standard" class="col-sm-2 control-label" translate="indicator.core"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.standard">
-				<p class="form-control-static">
-					<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
-				</p>
+			<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
+			<div class="col-sm-10">
+				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
+				</ui-select>
+
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
 			</div>
 		</div>
+
+		<div class="form-group">
+			<label for="input-operation" class="col-sm-2 control-label" translate="indicator.operation"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.operation">
+				<select id="input-operation" class="form-control" ng-model="indicator.operation">
+					<option value="parameter" translate="indicator.is_parameter"></option>
+					<option value="common" translate="indicator.is_common"></option>
+					<option value="mandatory" translate="indicator.is_mandatory"></option>
+				</select>
+			</div>
+		</div>
+
+	</fieldset>
+
+	<fieldset>
+		<legend translate>indicator.definition</legend>
 
 		<div class="form-group" show-errors>
 			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
@@ -30,6 +51,20 @@
 				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
+
+		<div class="form-group">
+			<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
+
+			<div class="col-sm-10">
+				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
+					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
+				</ui-select>
+
+				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
+			</div>
+		</div>		
+
 
 		<div class="form-group" show-errors>
 			<label for="input-description" class="col-sm-2 control-label" translate="shared.description"></label>
@@ -70,36 +105,13 @@
 			</div>
 		</div>
 	</fieldset>
-
+<!-- 
 	<fieldset>
 		<legend translate>indicator.categorization</legend>
 
-		<div class="form-group">
-			<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
 
-			<div class="col-sm-10">
-				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
-				</ui-select>
-
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
-			</div>
-		</div>
-
-		<div class="form-group">
-			<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
-			<div class="col-sm-10">
-				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
-					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
-					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
-				</ui-select>
-
-				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
-			</div>
-		</div>
 	</fieldset>
-
+ -->
 	<fieldset>
 		<legend translate>indicator.computation</legend>
 
