--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -23,6 +23,18 @@
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
+			<div class="col-sm-10">
+				<ui-select id="input-themes" multiple ng-model="project.themes" name="themes" theme="bootstrap" required acl-has-project-role="owner">
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
+				</ui-select>
+
+				<p class="form-control-static" acl-lacks-project-role="owner">{{project.themes | getObjects:themes | pluck:'name' | join:', '}}</p>
+			</div>
+		</div>
+
 		<div class="form-group" show-errors>
 			<label for="input-begin" class="col-sm-2 control-label" translate="project.begin_date"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.begin">
@@ -44,7 +56,6 @@
 				<p class="help-block" ng-if="projectForm.begin.$error.lowerThan" translate="form.begin_lower_than_end"></p>
 			</div>
 		</div>
-
 
 		<div class="form-group" show-errors>
 			<label for="input-end" class="col-sm-2 control-label" translate="project.end_date"></label>
@@ -89,17 +100,33 @@
 		<div class="form-group">
 			<label class="col-sm-2 control-label" translate="shared.indicators"></label>
 			<div class="col-sm-10">
-				<ul class="form-control-static">
-					<li ng-repeat="indicatorId in project.logicalFrame.indicators">
+				<div class="form-control-static">
+					<p ng-repeat="indicatorId in project.logicalFrame.indicators">
+						<i class="fa fa-external-link fa-fw"
+							ng-if="isExternal(indicatorId)"
+							tooltip="{{'indicator.is_external'|translate}}"
+							tooltip-placement="right"></i>
+
+						<i class="fa fa-question fa-fw"
+							ng-if="!isExternal(indicatorId) && indicatorsById[indicatorId].operation == 'common'"
+							tooltip="{{'indicator.is_common'|translate}}"
+							tooltip-placement="right"></i>
+
+						<i class="fa fa-asterisk fa-fw"
+							ng-if="!isExternal(indicatorId) && indicatorsById[indicatorId].operation == 'mandatory'"
+							tooltip="{{'indicator.is_mandatory'|translate}}"
+							tooltip-placement="right"></i>
+
 						{{indicatorsById[indicatorId].name}}
 						<span acl-has-project-role="owner">(<a ng-click="editIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.edit"></a> |
 							<a ng-click="detachIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.detach"></a>)</span>
 						<span acl-lacks-project-role="owner">(<a ng-click="editIndicator(indicatorId, project.logicalFrame.indicators)" translate="shared.display"></a>)</span>
-					</li>
-					<li acl-has-project-role="owner">
+
+					</p>
+					<p acl-has-project-role="owner">
 						<a ng-click="editIndicator('new', project.logicalFrame.indicators)" translate="project.add_indicator"></a>
-					</li>
-				</ul>
+					</p>
+				</div>
 			</div>
 		</div>
 	</fieldset>
